<resources>
    <string name="app_name">好下单</string>
    <string name="main_footer_chosen">精选</string>
    <string name="main_footer_category">分类</string>
    <string name="main_footer_hot">热点</string>
    <string name="main_footer_cart">购物车</string>
    <string name="main_footer_my">我的</string>
    <string name="title_cart">我的购物车</string>
    <string name="title_sure_order">确认订单</string>
    <string name="title_cashier">收银台</string>
    <string name="title_my_orders">我的订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_apply_refund">申请退款</string>
    <string name="title_refund_detail">退款详情</string>
    <string name="title_consult_history">协商历史</string>
    <string name="title_logistics">物流信息</string>
    <string name="title_evaluate">评价</string>
    <string name="title_search_result">搜索结果</string>
    <string name="title_category">分类</string>
    <string name="title_value_add">增值服务</string>
    <string name="title_purchaser_apply">采购商申请</string>
    <string name="title_supplier_apply">供应商申请</string>
    <string name="title_pay">支付</string>
    <string name="title_pay_success">支付成功</string>
    <string name="title_company_file">公司档案</string>
    <string name="title_add_bank_card">添加银行卡</string>
    <string name="title_select_bank_card">选择银行卡</string>
    <string name="title_all_goods">全部商品</string>
    <string name="label_choose_all">全选</string>
    <string name="label_total">合计&#160;:&#160;</string>
    <string name="label_not_contain_ship">不含运费</string>
    <string name="label_contain_ship">含运费</string>
    <string name="label_total_loan">货款总计&#160;:&#160;</string>
    <string name="label_total_ship">运费总计&#160;:&#160;</string>
    <string name="label_order_list">订单清单</string>
    <string name="label_count_ship">运费计算</string>
    <string name="label_order">订单</string>
    <string name="label_order_total_price">订单总金额</string>
    <string name="label_money">¥</string>
    <string name="label_select_pay_way">选择支付方式</string>
    <string name="label_sure_pay">确认支付</string>
    <string name="label_alipay">支付宝支付</string>
    <string name="label_wxpay">微信支付</string>
    <string name="label_card_pay">银行卡支付</string>
    <string name="label_bankpay">银联在线支付</string>
    <string name="label_pay_success">支付成功</string>
    <string name="label_apply_loan_success">贷款申请成功</string>
    <string name="label_pay_way_">付款方式&#160;:&#160;</string>
    <string name="label_pay_price_">付款金额&#160;:&#160;</string>
    <string name="label_order_price_">订单金额&#160;:&#160;</string>
    <string name="label_goods_recomend">商品推荐</string>
    <string name="label_find_like">找相似</string>
    <string name="label_gong">共</string>
    <string name="label_jianshangpin">件商品</string>
    <string name="label_jian">件</string>
    <string name="label_wait_pay">待付款</string>
    <string name="label_wait_ship">待发货</string>
    <string name="label_wait_receive">待收货</string>
    <string name="label_wait_evaluate">待评价</string>
    <string name="label_trade_success">交易成功</string>
    <string name="label_trade_complete">交易完成</string>
    <string name="label_trade_close">交易关闭</string>
    <string name="label_not_group">未成团</string>
    <string name="label_refund_complete">退款已完成</string>
    <string name="label_buyer_message">买家留言:</string>
    <string name="label_total_goods_price">商品总价</string>
    <string name="label_ship_price">运费(快递)</string>
    <string name="label_need_pay">需付款</string>
    <string name="label_true_pay">实付款</string>
    <string name="label_connect_saler">联系卖家</string>
    <string name="label_call_phone">拨打电话</string>
    <string name="label_order_num_">订单编号&#160;:&#160;</string>
    <string name="label_order_time_">下单时间&#160;:&#160;</string>
    <string name="label_pay_time_">支付时间&#160;:&#160;</string>
    <string name="label_ship_time_">发货时间&#160;:&#160;</string>
    <string name="label_refund_reason">退款原因</string>
    <string name="label_please_select">请选择</string>
    <string name="label_refund_msg_">退款说明&#160;:&#160;</string>
    <string name="label_upload_voucher">上传凭证</string>
    <string name="label_consult_history">协商历史</string>
    <string name="label_refund_info">退款信息</string>
    <string name="label_refund_reason_">退款原因&#160;:&#160;</string>
    <string name="label_refund_price_">退款金额&#160;:&#160;</string>
    <string name="label_picture_">图片&#160;:&#160;</string>
    <string name="label_apply_time_">申请时间&#160;:&#160;</string>
    <string name="label_refund_no_">退款编号&#160;:&#160;</string>
    <string name="label_wu">无</string>
    <string name="label_max_five">(最多5张)</string>
    <string name="label_saler_examine">卖家审核中</string>
    <string name="label_refund_success">退款成功</string>
    <string name="label_refund_failed">退款失败</string>
    <string name="label_ship_company_">承运公司&#160;:&#160;</string>
    <string name="label_logistics_no_">运单编号&#160;:&#160;</string>
    <string name="label_deliveryer">派件员</string>
    <string name="label_this_data">本数据由</string>
    <string name="label_provide">提供</string>
    <string name="label_anonymous">匿名</string>
    <string name="label_anonymous_tip">您的评价会以匿名的形式存在</string>
    <string name="label_shop_evaluate">店铺评分</string>
    <string name="label_logistics_evaluate">物流服务</string>
    <string name="label_service_evaluate">服务态度</string>
    <string name="label_serach_history">搜索历史</string>
    <string name="label_user_type_">会员类型&#160;:&#160;</string>
    <string name="label_validity_time_">有效期至&#160;:&#160;</string>
    <string name="label_value_add">普通会员可以通过增值服务，升级成为采购商、供应商，采购商可以享受购买商品、查看供应商档案等权益；供应商可以开通店铺、发布商品等权益！</string>
    <string name="label_common_member">普通会员</string>
    <string name="label_purchaser">采购商</string>
    <string name="label_supplier">供应商</string>
    <string name="label_purchaser_en">PURCHASER</string>
    <string name="label_supplier_en">SUPPLIER</string>
    <string name="label_immediately_settled">立即入驻</string>
    <string name="label_apply_type_">已申请类型&#160;:&#160;</string>
    <string name="label_order_status_">状态&#160;:&#160;</string>
    <string name="label_apply_modify_">已提交资料&#160;:&#160;</string>
    <string name="label_no_pay">未支付</string>
    <string name="label_company">公司名称</string>
    <string name="label_license_number">营业执照号</string>
    <string name="label_enterprise_type">企业类型</string>
    <string name="label_employees_num">员工人数</string>
    <string name="label_main_industry">主营行业</string>
    <string name="label_product_style">产品风格</string>
    <string name="label_main_products">主营产品</string>
    <string name="label_main_customergroups">主要客户群体</string>
    <string name="label_year_sales">年销售额</string>
    <string name="label_local">所在地</string>
    <string name="label_detail_address">详细地址</string>
    <string name="label_business_contacts">业务联系人</string>
    <string name="label_contact_phone">联系人电话</string>
    <string name="label_main_saleschannels">主要销售渠道</string>
    <string name="label_month_sales">月销售额</string>
    <string name="label_shop_introduction">店铺介绍</string>
    <string name="label_month_production">月产量</string>
    <string name="label_year_export_num">年出口额</string>
    <string name="label_company_">公司名称&#160;:&#160;</string>
    <string name="label_license_number_">营业执照&#160;:&#160;</string>
    <string name="label_enterprise_type_">企业类型&#160;:&#160;</string>
    <string name="label_employees_num_">员工人数&#160;:&#160;</string>
    <string name="label_shop_introduction_">店铺介绍&#160;:&#160;</string>
    <string name="label_main_industry_">主营行业&#160;:&#160;</string>
    <string name="label_product_style_">产品风格&#160;:&#160;</string>
    <string name="label_main_products_">主营产品&#160;:&#160;</string>
    <string name="label_main_customergroups_">主要客户群体&#160;:&#160;</string>
    <string name="label_month_production_">月均产量&#160;:&#160;</string>
    <string name="label_year_sales_">年营业额&#160;:&#160;</string>
    <string name="label_year_export_num_">年出口额&#160;:&#160;</string>
    <string name="label_buy_year">购买年限</string>
    <string name="label_year">年</string>
    <string name="label_year_fee">年费</string>
    <string name="label_yuan_every_year_">元/年</string>
    <string name="label_congratulation_pay_success">恭喜您,支付成功!</string>
    <string name="label_pay_price2_">支付金额&#160;:&#160;</string>
    <string name="label_yuan">元</string>
    <string name="label_goods">商品</string>
    <string name="label_collect">收藏</string>
    <string name="label_has_collect">已收藏</string>
    <string name="label_hot_choose">热门精选</string>
    <string name="label_price">价格</string>
    <string name="label_sales">销量</string>
    <string name="label_multiple">综合</string>
    <string name="label_home">首页</string>
    <string name="label_promotion">促销</string>
    <string name="label_new">上新</string>
    <string name="label_explosion">爆款</string>
    <string name="label_choose_main_industry">选择主营行业</string>
    <string name="label_choose_product_style">选择产品风格</string>
    <string name="label_choose_local">选择所在地</string>
    <string name="label_order_all">全部</string>
    <string name="label_order_wait_pay">待付款</string>
    <string name="label_order_wait_ship">待发货</string>
    <string name="label_order_wait_receive">待收货</string>
    <string name="label_order_wait_evaluate">待评价</string>
    <string name="label_in_refund">退款中</string>
    <string name="label_order_wait_buyer_pay">等待买家付款</string>
    <string name="label_order_buyer_has_pay">买家已付款</string>
    <string name="label_order_wait_buyer_receive">等待买家收货</string>
    <string name="label_choose_refund_reason">选择退款原因</string>
    <string name="label_choose_cancel_reason">选择取消原因</string>
    <string name="label_choose_img">请选择图片</string>
    <string name="label_reason_">原因&#160;:&#160;</string>
    <string name="label_buyer">买家</string>
    <string name="label_yu">于</string>
    <string name="label_apply_refund">发起退款申请</string>
    <string name="label_saler_agree_refund">卖家同意退款</string>
    <string name="label_saler_refuse_refund">卖家拒绝退款</string>
    <string name="label_card_type">卡类型</string>
    <string name="label_select_bank">选择银行</string>
    <string name="label_please_bind_person_card">请绑定持卡人本人的银行卡</string>
    <string name="label_account_name">账户名称</string>
    <string name="label_ident_type">证件类型</string>
    <string name="label_ident_number">证件号码</string>
    <string name="label_card_number">卡号</string>
    <string name="label_card_date">卡有效期</string>
    <string name="label_card_cvn">信用卡CVN号</string>
    <string name="label_mobile_number">手机号</string>
    <string name="label_ident_card">身份证</string>
    <string name="label_card_jieji">个人借记</string>
    <string name="label_card_daiji">个人贷记</string>
    <string name="label_month_sale_jian">已售%1$s件</string>
    <string name="label_enter_phone_receive_code">请输入%1$s收到的短信验证码</string>
    <string name="label_cheng">X</string>
    <string name="label_after_sale">售后管理</string>
    <string name="label_shenyu_">剩余&#160;:&#160;</string>
    <string name="label_receive_people_">收货人&#160;:&#160;</string>
    <string name="label_skip">跳过</string>
    <string name="label_main_buy_industry">主采购行业</string>
    <string name="label_second_buy_industry">还关注行业</string>
    <string name="label_please_select_industry">请选择一个行业</string>
    <string name="label_all_industry">全部行业</string>
    <string name="label_goods_no_">货号&#160;:&#160;</string>
    <string name="label_jiyishang">及以上</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_settlement">结算</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_back_home">返回首页</string>
    <string name="btn_verify_info">验证信息</string>
    <string name="hint_account_name">请输入账户名称</string>
    <string name="hint_ident_number">请输入证件号码</string>
    <string name="hint_card_number">请输入卡号</string>
    <string name="hint_card_date">格式YYMM,0717表示2017年07月</string>
    <string name="hint_card_cvn">信用卡背面的末3位数字</string>
    <string name="hint_mobile_number">请输入手机号</string>
</resources>