<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.zhejiang.haoxiadan.ui.view.CommonTitle
        android:id="@+id/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleStr="@string/title_add_bank_card"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        style="@style/text_black_14"
        android:gravity="center"
        android:text="@string/label_please_bind_person_card"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_account_name"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_account_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:hint="@string/hint_account_name"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_account_name"
                android:background="@color/transparent"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_ident_type"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_ident_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/tv_ident_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_ident_type"
                android:background="@color/transparent"
                android:text="@string/label_ident_card"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_ident_number"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_ident_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_ident_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:hint="@string/hint_ident_number"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_ident_number"
                android:background="@color/transparent"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_card_number"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:hint="@string/hint_card_number"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_card_number"
                android:background="@color/transparent"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:id="@+id/ll_card_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_card_date"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_card_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:hint="@string/hint_card_date"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_card_date"
                android:background="@color/transparent"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:id="@+id/ll_card_cvn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_card_cvn"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_card_cvn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_card_cvn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:hint="@string/hint_card_cvn"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_card_cvn"
                android:background="@color/transparent"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_apply_item_height"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/distance"
            style="@style/text_black_14"
            android:gravity="center_vertical"
            android:text="@string/label_mobile_number"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/distance" >
            <ImageView
                android:id="@+id/iv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_small"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/text_black_14"
                android:hint="@string/hint_mobile_number"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@id/iv_mobile_number"
                android:background="@color/transparent"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_verify_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="@dimen/value_add_apply_btn_margin_left"
        android:layout_marginRight="@dimen/value_add_apply_btn_margin_left"
        android:layout_marginTop="@dimen/value_add_apply_btn_margin_top"
        android:background="@drawable/bg_solid_red_corner"
        android:gravity="center"
        style="@style/text_white_17"
        android:text="@string/btn_verify_info"/>

</LinearLayout>
