<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray">
    <com.zhejiang.haoxiadan.ui.view.CommonTitle
        android:id="@+id/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleStr="@string/title_pay_success" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_add_pay_success_top_height"
        android:layout_marginTop="@dimen/top_distance"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_add_pay_success_icon_margin_top"
            android:layout_marginBottom="@dimen/value_add_pay_success_icon_margin_bottom"
            android:src="@mipmap/icon_success"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_red_17"
            android:text="@string/label_congratulation_pay_success"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1"
        android:background="@color/line_gray_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_add_pay_success_time_margin_top"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_gray_14"
                android:text="@string/label_validity_time_"/>
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_black_14"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_add_pay_success_price_margin_top"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_gray_14"
                android:text="@string/label_pay_price2_"/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_black_14"
                android:text=""/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_black_14"
                android:text="@string/label_yuan"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginLeft="@dimen/value_add_pay_success_btn_margin_left"
            android:layout_marginRight="@dimen/value_add_pay_success_btn_margin_left"
            android:layout_marginTop="@dimen/value_add_pay_success_btn_margin_top"
            android:background="@drawable/bg_solid_red_corner"
            android:gravity="center"
            style="@style/text_white_17"
            android:text="@string/btn_back_home"/>
    </LinearLayout>

</LinearLayout>
