<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="3dp"
        android:elevation="3dp"
        android:background="@color/bg_white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance">
            <TextView
                android:id="@+id/label_main_buy_industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_gray_14"
                android:text="@string/label_main_buy_industry"/>
            <TextView
                android:id="@+id/tv_main_buy_industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_main_buy_industry"
                android:layout_marginLeft="@dimen/distance"
                style="@style/text_black_14"
                android:text="@string/label_please_select_industry"/>

            <TextView
                android:id="@+id/tv_main_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/text_red_14"
                android:text="@string/btn_edit"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance"
            android:layout_marginRight="@dimen/distance"
            android:layout_marginBottom="@dimen/distance">
            <TextView
                android:id="@+id/label_second_buy_industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_gray_14"
                android:text="@string/label_second_buy_industry"/>
            <TextView
                android:id="@+id/tv_second_buy_industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/label_second_buy_industry"
                android:layout_marginLeft="@dimen/distance"
                style="@style/text_black_14"
                android:text="@string/label_please_select_industry"/>

            <TextView
                android:id="@+id/tv_second_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/text_red_14"
                android:text="@string/btn_edit"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_1"
            android:background="@color/line_gray_cc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance"
            android:text="@string/label_all_industry"/>
        <GridView
            android:id="@+id/gv_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance"
            android:numColumns="4"
            android:verticalSpacing="@dimen/item_distance_5"
            android:horizontalSpacing="@dimen/item_distance_5"/>
    </LinearLayout>
</LinearLayout>